force-app/main/default/objects/Signal_Adapter_Config__c/Signal_Adapter_Config__c.object-meta.xml
<CustomObject>
    <description>Registers and configures each signal source for deal health scoring.</description>
    <label>Signal Adapter Config</label>
    <nameField><label>Signal Adapter Config Name</label><type>Text</type></nameField>
    <pluralLabel>Signal Adapter Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>