force-app/main/default/objects/Signal_Adapter_Config__c/fields/Adapter_Class__c.field-meta.xml
<CustomField>
    <fullName>Adapter_Class__c</fullName>
    <description>Fully qualified Apex class name</description>
    <label>Adapter Class</label>
    <type>Text</type>
    <length>100</length>
</CustomField>