force-app/main/default/objects/Signal_Adapter_Config__c/fields/Freshness_SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>Freshness_SLA_Hours__c</fullName>
    <description>RECENT threshold</description>
    <label>Freshness SLA Hours</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>