force-app/main/default/objects/Signal_Adapter_Config__c/fields/Hard_Expire_Hours__c.field-meta.xml
<CustomField>
    <fullName>Hard_Expire_Hours__c</fullName>
    <description>EXPIRED threshold</description>
    <label>Hard Expire Hours</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>