force-app/main/default/objects/Signal_Adapter_Config__c/fields/Last_Sync_Errors__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Errors__c</fullName>
    <label>Last Sync Errors</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>