force-app/main/default/objects/Signal_Adapter_Config__c/fields/Last_Sync_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_On__c</fullName>
    <label>Last Sync On</label>
    <type>DateTime</type>
</CustomField>