force-app/main/default/objects/Signal_Adapter_Config__c/fields/Last_Sync_Records__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Records__c</fullName>
    <label>Last Sync Records</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>