force-app/main/default/objects/Signal_Adapter_Config__c/fields/Last_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Status__c</fullName>
    <label>Last Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Partial</fullName><default>false</default><label>Partial</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Never_Run</fullName><default>false</default><label>Never_Run</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>