force-app/main/default/objects/Signal_Adapter_Config__c/fields/Normalization_Config__c.field-meta.xml
<CustomField>
    <fullName>Normalization_Config__c</fullName>
    <description>JSON field mapping for Custom_HTTP</description>
    <label>Normalization Config</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>