force-app/main/default/objects/Signal_Adapter_Config__c/fields/Signal_Priority__c.field-meta.xml
<CustomField>
    <fullName>Signal_Priority__c</fullName>
    <description>1 = highest</description>
    <label>Signal Priority</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>