force-app/main/default/objects/Signal_Adapter_Config__c/fields/Sync_Method__c.field-meta.xml
<CustomField>
    <fullName>Sync_Method__c</fullName>
    <label>Sync Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Webhook_Realtime</fullName><default>false</default><label>Webhook_Realtime</label></value>
            <value><fullName>Scheduled_Batch</fullName><default>false</default><label>Scheduled_Batch</label></value>
            <value><fullName>Both</fullName><default>false</default><label>Both</label></value>
            <value><fullName>Event_Driven</fullName><default>false</default><label>Event_Driven</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>