force-app/main/default/objects/Signal_Adapter_Config__c/fields/Sync_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Sync_Schedule__c</fullName>
    <description>CRON expression</description>
    <label>Sync Schedule</label>
    <type>Text</type>
    <length>50</length>
</CustomField>