force-app/main/default/objects/Signal_Adapter_Config__c/fields/Webhook_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Endpoint__c</fullName>
    <label>Webhook Endpoint</label>
    <type>Url</type>
</CustomField>